--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
         "express": "^4.17.1",
         "express-async-handler": "^1.2.0",
         "i": "^0.3.7",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.8",
         "nodemon": "^2.0.15",
         "npm": "^8.1.3",
+        "react-router-bootstrap": "^0.25.0",
         "react-top-loading-bar": "^2.0.1",
         "redux-devtools-extension": "^2.13.9"
     }
